package proto;
option java_package="netty.demo.protobuf";
option java_outer_classname="SubscribeReqProto";

message SubscribeReq{
required int32 subReqId=1;
required string userName=2;
required string productName=3;
repeated string address=4;
}