package proto;
option java_package="netty.demo.protobuf";
option java_outer_classname="SubscribeRespProto";

message SubscribeResp{
required int32 subReqId=1;
required int32 respCode=2;
required string desc=3;
}